# Basic variables and setup
cmake_minimum_required(VERSION 2.4)
project(QuickGUI)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/")
set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin" CACHE STRING "")
option(DEBUG OFF)
if (DEBUG)
	set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/Debug" CACHE STRING "")
else ()
	set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/Release" CACHE STRING "")
endif ()
if (WIN32)
elseif (UNIX)
	if (APPLE)
		set(CMAKE_INSTALL_PREFIX /Library/Frameworks)
	else ()
		set(CMAKE_INSTALL_PREFIX /usr/local)
	endif ()
endif ()
include(CMakeModules/Macros.cmake)

# Complain about missing packages
find_package(Dependencies)
include_directories(${DEP_INCLUDE_PATH})
if (NOT OGRE_FOUND)
	message(FATAL_ERROR "OGRE not found!")
endif()
if (NOT OIS_FOUND)
	message(FATAL_ERROR "OIS not found!")
endif()

# Build Options
if (DEBUG)
	set(DEBUG_FLAGS "-g")
else ()
	set(DEBUG_FLAGS "-w -s -Os -O3 -fexpensive-optimizations")
endif ()
if (WIN32)
	set(MISC_FLAGS "-DOGRE_UNICODE_SUPPORT=1")
endif ()

# Build Targets
add_subdirectory(QuickGUI)
add_subdirectory(QuickGUIEditor)
