set (QuickGUI_FILES_SRC
	QuickGUIBrush.cpp
	QuickGUIButton.cpp
	QuickGUICharacter.cpp
	QuickGUICheckBox.cpp
	QuickGUIColorPicker.cpp
	QuickGUIComboBox.cpp
	QuickGUIComponentType.cpp
	QuickGUIComponentWidget.cpp
	QuickGUIConsole.cpp
	QuickGUIContainerWidget.cpp
	QuickGUIContextMenu.cpp
	QuickGUIDefinitionProperty.cpp
	QuickGUIDescManager.cpp
	QuickGUIEventHandlerManager.cpp
	QuickGUIException.cpp
	QuickGUIFactoryManager.cpp
	QuickGUIForwardDeclaredDesc.cpp
	QuickGUIHScrollBar.cpp
	QuickGUIImage.cpp
	QuickGUILabel.cpp
	QuickGUIList.cpp
	QuickGUIListImageItem.cpp
	QuickGUIListItem.cpp
	QuickGUIListTextItem.cpp
	QuickGUIManager.cpp
	QuickGUIMenu.cpp
	QuickGUIMenuItem.cpp
	QuickGUIMenuPanel.cpp
	QuickGUIMenuTextItem.cpp
	QuickGUIModalWindow.cpp
	QuickGUIMouseCursor.cpp
	QuickGUIPanel.cpp
	QuickGUIPoint.cpp
	QuickGUIProgressBar.cpp
	QuickGUIPropertyGrid.cpp
	QuickGUIPropertyGridBoolProperty.cpp
	QuickGUIPropertyGridComboBoxProperty.cpp
	QuickGUIPropertyGridItem.cpp
	QuickGUIPropertyGridSection.cpp
	QuickGUIPropertyGridTextProperty.cpp
	QuickGUIRadioButton.cpp
	QuickGUIRect.cpp
	QuickGUIRoot.cpp
	QuickGUIScriptDefinition.cpp
	QuickGUIScriptNode.cpp
	QuickGUIScriptReader.cpp
	QuickGUIScriptWriter.cpp
	QuickGUISerialBase.cpp
	QuickGUISerialReader.cpp
	QuickGUISerialWriter.cpp
	QuickGUISheet.cpp
	QuickGUISheetManager.cpp
	QuickGUISize.cpp
	QuickGUISkinDefinition.cpp
	QuickGUISkinDefinitionManager.cpp
	QuickGUISkinElement.cpp
	QuickGUISkinType.cpp
	QuickGUISkinTypeManager.cpp
	QuickGUIStringConverter.cpp
	QuickGUITab.cpp
	QuickGUITabControl.cpp
	QuickGUITabPage.cpp
	QuickGUIText.cpp
	QuickGUITextArea.cpp
	QuickGUITextBox.cpp
	QuickGUITextCursor.cpp
	QuickGUITextLine.cpp
	QuickGUITextUser.cpp
	QuickGUITimer.cpp
	QuickGUITimerManager.cpp
	QuickGUITitleBar.cpp
	QuickGUIToolBar.cpp
	QuickGUIToolBarItem.cpp
	QuickGUITreeView.cpp
	QuickGUITreeViewCheckBoxNode.cpp
	QuickGUITreeViewNode.cpp
	QuickGUITreeViewRadioButtonNode.cpp
	QuickGUIUVRect.cpp
	QuickGUIVScrollBar.cpp
	QuickGUIWidget.cpp
	QuickGUIWindow.cpp
)

add_library(QuickGUI ${QuickGUI_LIB_TYPE} ${QuickGUI_FILES_SRC})
target_link_libraries(QuickGUI ${OGRE_LIBRARY})
